--- a/1.html
+++ b/1.html
@@ -9,8 +9,8 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body>
-
+<body class="bg-gray-200">
+    hello word
 </body>
 
 </html>
